review changes (renaming in FEPermission)